[package]
name = "lethargy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.1"
clap = { version = "4.5.17", features = ["derive"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
sqlite = "0.36.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
